<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SplashScreen">

    <ImageView
        android:id="@+id/splashImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:paddingTop="30dp"
        android:layout_centerInParent="true"
        android:src="@drawable/notes" />

    <TextView
        android:id="@+id/notesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splashImage"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/notes"
        android:textSize="38sp"
        android:textStyle="bold"
       android:layout_centerInParent="true"
        android:fontFamily="@font/product_sans_bold"
        android:textColor="@color/blue"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_akira"
        android:textColor="@color/blue"
        android:fontFamily="@font/product_sans_regular"
        android:layout_below="@+id/notesTitle"
        android:layout_centerInParent="true"
        />


</RelativeLayout>