<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical">
    <View
        android:layout_width="100dp"
        android:layout_height="6dp"
        android:background="@drawable/delete_top"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_note"
        android:textSize="20sp"
        android:fontFamily="@font/product_sans_bold"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/delete_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="17dp"
        android:padding="8dp"
        android:background="@drawable/back_no"
        android:fontFamily="@font/product_sans_bold"/>
    <TextView
        android:id="@+id/delete_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:background="@drawable/back_yes"
        android:gravity="center"
        android:textColor="@color/black"
        android:padding="8dp"
        android:fontFamily="@font/product_sans_bold"/>


</LinearLayout>