<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/black"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_baseline_filter_alt_24"
            android:layout_margin="12dp"
            android:background="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noFilter"
            android:text="@string/no_filter"
            android:fontFamily="@font/product_sans_bold"
            android:background="@drawable/back_yes"
            android:padding="8dp"
            android:layout_margin="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/highToLowFilter"
            android:text="@string/high_to_low"
            android:fontFamily="@font/product_sans_bold"
            android:background="@drawable/back_yes"
            android:padding="8dp"
            android:layout_margin="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lowToHighFilter"
            android:text="@string/low_to_high"
            android:fontFamily="@font/product_sans_bold"
            android:background="@drawable/back_yes"
            android:padding="8dp"
            android:layout_margin="8dp"
            />

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/notesRecyclerView"
        tools:listitem="@layout/recylcle_items"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_add_24_black"
        android:layout_margin="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>