<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.InsertNoteActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/titleEditor"
            android:background="@drawable/editor_styling"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
        <EditText
            android:id="@+id/subTitleEditor"
            android:padding="10dp"
            android:background="@drawable/editor_styling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sub_title"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:fontFamily="@font/product_sans_bold"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/green_circle"
                android:background="@drawable/circle_green"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_baseline_done_24"

                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/yellow_circle"
                android:background="@drawable/circle_yellow"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/red_circle"
                android:background="@drawable/circle_red"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"

                />


        </LinearLayout>

        <EditText
            android:id="@+id/textEditor"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:hint="@string/here_notes"
            android:gravity="start"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/editor_styling"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/doneFab"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_baseline_done_24"
        android:backgroundTint="@color/white"

        />
</RelativeLayout>